--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 html {
   height: 100%;
   width: 100%;
-  background-color: #ff6250;
+  background-color: #eaeaea;
   font-family: Arial, Helvetica, sans-serif;
+  
 }
 
 body{
@@ -19,10 +20,7 @@ body{
   
 }
 
-.input-text {
-  width: fit-content;
-  
-}
+
 
 h1 {
   
@@ -43,10 +41,24 @@ h2 {
 }
 
 p {
-    margin: 10px 0;
-    padding: 10px;
-    border: 1px solid #000000;
+  color:gray;
 }
+
+.input-text {
+  width: fit-content; 
+  border-radius:50px;
+  padding: 5px 10px;
+  
+}
+
+.btn {
+  border-radius:50px;
+  padding: 5px 10px;
+  background-color: #8393f4;
+  border: none;
+  color:#ffffff;
+}
+
 
 .box{
     border: 1px solid #000000;  
@@ -58,3 +70,4 @@ p {
     justify-content: center;
     gap: 50px;
 }
+
